# fortran_input_reader

./: .coveralls.yml  .travis.yml  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  README.rst  appveyor.yml  circle.yml  setup  setup.py  shippable.yml  test.py  wercker.yml
cmake/: autocmake.cfg  autocmake.cfg_wrong
cmake/downloaded/: autocmake_fc.cmake
src/: CMakeLists.txt
src/example/: EXAMPLE.INP  checkdata.F90  example.F90
src/examples/: EXAMPLE.INP  example1.F90
src/input_reader/: input_reader.F90
src/lib/: quit.F90
